# boost-log-example

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
src/: main2.cpp
